Fix scrollbar on areas

--- a/j-SelectBox/component.css
+++ b/j-SelectBox/component.css
@@ -2,7 +2,7 @@
 .ui-selectbox-container  { position:  relative; left: 0; right: 0; overflow: hidden; }
 .ui-selectbox-area  { height:  100%; position:  absolute; left:  0; right:  0; overflow:  hidden; }
 .ui-selectbox-container .ui-selectbox-area: last-child  { left:  50%; }
-.ui-selectbox .ui-selectbox-body  { list-style-type: none; width: 100%; height: 100%; float: left; overflow: hidden; margin: 0; padding: 0; background-color:  #FFF; border-left: 1px solid #E0E0E0; font-weight: bold; }
+.ui-selectbox .ui-selectbox-body  { list-style-type: none; width: 100%; height: 100%; float: left; overflow: auto; margin: 0; padding: 0; background-color:  #FFF; border-left: 1px solid #E0E0E0; font-weight: bold; }
 .ui-selectbox .ui-selectbox-area:first-child .ui-selectbox-body { border-left: 0; font-weight: normal; }
 .ui-selectbox .ui-selectbox-body span { border-bottom: 1px solid #E0E0E0; padding: 5px 10px; cursor: pointer; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; display: block; color: #000; }
 .ui-selectbox .ui-selectbox-body span:hover { background-color: #F0F0F0; text-decoration: none; }
